fix alignment issues

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,6 +6,6 @@
 
 
 .pages {
-    max-width: 1440px;
+    max-width: 1600px;
     margin: 0 auto;
 }
